--- a/html-css-lesson-1/style.css
+++ b/html-css-lesson-1/style.css
@@ -84,6 +84,14 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	border-radius: 100%;
 	height: 300px;
 }
+.avatar__foto:hover {
+	transition: all 0.8s ease 0s;
+	transform: translate(-30px, 0);
+	box-shadow: 5px 5px 10px 5px;
+	transform: rotate(-180deg);
+}
+
+
 .mainblock__contacts {
 	align-self: center;
 }
