--- a/html-css-lesson-1/style.css
+++ b/html-css-lesson-1/style.css
@@ -38,91 +38,90 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 
 }
 
-.wrapper {
-	background-color: aqua;
-	min-height: 100%;
-	min-width: 100%;
-	
-	
-    
+body,
+html {
+    width: 100%;
+    background: rgb(0,255,250);
+    background: linear-gradient(15deg, rgba(0,255,250,0.1) 0%, rgba(217,255,142,0.2) 37%, rgba(214,255,154,0.3) 57%, rgba(0,184,63,0.3) 91%);
+    font-size: 16px;
+    color: #000;
+    height: 100%;
+    min-height: 100%;
 }
-.container {
-	
-	
-		    
-}
-.mainblock {
-	display: flex;	
-	display: flex;
-    flex-wrap: wrap;
-    align-content: center;
-	justify-content: center;
-	padding-top: 50px;
-	padding-left: 50px;
-	padding-right: 50px;
-	margin: 0 auto;
-	width: 800px;
-    
-	
-	
-	
-	
-	
-    
-}
-.mainblock__img {
-	margin-right: 30px;
-	margin-bottom: 30px;
+.person {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 60%;
+    margin: auto;
 
-	
+}
+.person__info {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+
+}
+.person__contacts {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.person__details {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .avatar {
-	
+    margin-top: 32px;
+    margin-bottom: 32px;
+    margin-right: 32px;
+    display: flex;
+    justify-content: center;
 }
-.avatar__foto {
-	border: 20px solid white;
-	border-radius: 100%;
-	height: 300px;
+.avatar__picture {
+    background: url(img/avatar.jpg) 50% 50% no-repeat; /* 50% 50% centers image in div */
+    max-width: 350px;
+    border-radius: 50%;
+    border: 25px
+    solid #fff;
 }
-.avatar__foto:hover {
-	transition: all 0.8s ease 0s;
-	transform: translate(-30px, 0);
-	box-shadow: 5px 5px 10px 5px;
-	transform: rotate(-180deg);
+.avatar__picture:hover {
 }
 
-
-.mainblock__contacts {
-	align-self: center;
-}
 .contacts {
+    flex-direction: column;
+    justify-content: center;
 }
 .contacts__name {
+    font-weight: bold;
+    font-size: 32px;
 }
 .contacts__role {
-}
-.contacts__links {
+    font-weight: bold;
+    font-size: 19px;
+    margin-bottom: 32px;
 }
 .contacts__item {
+    font-style: italic;
 }
 .contacts__title {
+    font-weight: bold;
+}
+.contacts__title:after {
+    content: ":";
 }
 .contacts__link {
+    color: gray;
+    border-color: #000;
 }
-.main__details {
+
 }
 .paragraph {
-	line-height: 1.2rem;
-	font-family:Georgia, 'Times New Roman', Times, serif;
+    margin: 16px 0;
+    max-width: 700px;
 }
-.paragraph__first {
-	
-
+.paragraph_last {
+    margin-bottom: 48px;
 }
-.paragraph__second {
-	
-}
-.paragraph__last {
-}
-
-
