частиичная замена px на rem

--- a/html-css-lesson-1/style.css
+++ b/html-css-lesson-1/style.css
@@ -125,13 +125,13 @@ html {
     color: black;
 }
 
-}
+
 .paragraph {
-    margin: 16px 0;
+    margin-bottom: 2rem;
     max-width: 700px;
 }
 .paragraph_last {
-    margin-bottom: 48px;
+    margin-bottom: 4rem;
 }
 
 
