--- a/html-css-lesson-1/style.css
+++ b/html-css-lesson-1/style.css
@@ -43,10 +43,11 @@ html {
     width: 100%;
     background: rgb(0,255,250);
     background: linear-gradient(15deg, rgba(0,255,250,0.1) 0%, rgba(217,255,142,0.2) 37%, rgba(214,255,154,0.3) 57%, rgba(0,184,63,0.3) 91%);
-    font-size: 16px;
+    font-size: 1rem;
     color: #000;
     height: 100%;
     min-height: 100%;
+    background-attachment:fixed;
 }
 .person {
     display: flex;
@@ -59,7 +60,7 @@ html {
 .person__info {
     display: flex;
     justify-content: center;
-    margin-bottom: 30px;
+    margin-bottom: 2rem;
 
 }
 .person__contacts {
@@ -74,9 +75,9 @@ html {
     align-items: center;
 }
 .avatar {
-    margin-top: 32px;
-    margin-bottom: 32px;
-    margin-right: 32px;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    margin-right: 2rem;
     display: flex;
     justify-content: center;
 }
@@ -84,15 +85,15 @@ html {
     background: url(./SBER.jpg) 50% 50% no-repeat; /* 50% 50% centers image in div */
     max-width: 350px;
     border-radius: 50%;
-    border: 25px
+    border: 1.6rem
     solid #fff;
-    margin: 30px 0;
+    margin: 2rem 0;
     z-index: 10;
     transition: transform 2s;
 }
 .avatar__picture:hover {
     transform: translateX(100%) rotate(360deg);
-    transition: transform 2s ease;
+    transition: transform 2s ease 0.1s;
 }
 
 .contacts {
@@ -101,12 +102,12 @@ html {
 }
 .contacts__name {
     font-weight: bold;
-    font-size: 32px;
+    font-size: 2rem;
 }
 .contacts__role {
     font-weight: bold;
-    font-size: 19px;
-    margin-bottom: 32px;
+    font-size: 1.9rem;
+    margin-bottom: 2rem;
 }
 .contacts__item {
     font-style: italic;
@@ -123,15 +124,18 @@ html {
 }
 .contacts__link:hover {
     color: black;
+    
 }
 
 
 .paragraph {
     margin-bottom: 2rem;
     max-width: 700px;
+    
 }
 .paragraph_last {
     margin-bottom: 4rem;
 }
 
 
+ 
